# common_lib

./: CHANGELOG.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README_JA.md  SECURITY.md
.agents/: AGENTS.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DIAGRAM.md  EXAMPLES.md  FOOTPRINTS.md  INSTRUCTIONS.md  SPEC.md  TODO.md
docs/en/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DIAGRAM.md  EXAMPLES.md  FOOTPRINTS.md  INSTRUCTIONS.md  RELEASE.md  SECURITY.md  SPEC.md  TESTING.md  TODO.md
docs/ja/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DIAGRAM.md  EXAMPLES.md  FOOTPRINTS.md  INSTRUCTIONS.md  RELEASE.md  SECURITY.md  SPEC.md  TESTING.md  TODO.md
src/: crypto.rs  desktop.rs  error.rs  lib.rs  text.rs
