[package]
name = "common_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]

windows = { version = "0.62.2", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Security"] }

[features]
default = []
windows_desktop = []
